# rag-tut

./: .gitignore  advanced_rag.py  chroma.py  cost_optimization.py  doc_loader.py  embeddings_deep.py  hybrid_search.py  langsmith_setup.py  main.py  monitoring.py  monitoring_prod.py  prod_chunking.py  pyproject.toml  rag_pipeline.py  raw_emb.py  semantic_chunking.py  text_splitters.py  vector_stores.py
agentic-rag-tutorial/: .gitignore  01_long_context_vs_rag.py  02_contextual_retrieval.py  03_late_chunking.py  04_agentic_rag.py  05_graphrag_intro.py  06_multimodal_rag.py  README.md  pyproject.toml  requirements.txt
cost_optimization/: readme.md  requirements.txt
cost_optimization/app/: budget.py  cache.py  config.py  llm_factory.py  main.py  models.py  router.py
database/: connection.py  production_example.py
rag_pipeline/: adv_rag.py  app.py
rag_project/: README.md  config.py  rag_pipeline.py  requirements.txt
supabase/: supabase_connection.py
