[project]
name = "tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-community>=0.4.1",
    "langchain>=1.2.7",
    "langchain-anthropic>=1.3.1",
    "langchain-core>=1.2.7",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "python-dotenv>=1.2.1",
    "bs4>=0.0.2",
    "pypdf>=6.6.2",
    "langchain-ollama>=1.0.1",
    "langchain-chroma>=1.1.0",
    "rank-bm25>=0.2.2",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "pytest>=9.0.2",
    "fastapi>=0.129.0",
    "uvicorn>=0.40.0",
    "google-generativeai",
    "langchain-google-genai",
    "langchain-huggingface>=1.2.2",
    "transformers==4.56.0",
    "tokenizers==0.22.1",
    "sentence-transformers==5.1.0",
    "langsmith>=0.8.6",
]
