[project]
name = "fcc-production-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.0,<2.0.0",
    "langchain-chroma>=1.1.0,<2.0.0",
    "langchain-openai>=1.1.0,<2.0.0",
    "langchain-text-splitters>=1.1.2",
    "networkx>=3.6.1",
    "openai>=2.32.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.12.0",
]
